kubernetes/apps/huly/huly/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: huly
spec:
  hostnames:
    - huly.hayden.moe
  parentRefs:
    - name: external
      namespace: network
  rules:
    - backendRefs:
        - name: account
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /_accounts

    - backendRefs:
        - name: transactor
          port: 3333
      matches:
        - path:
            type: PathPrefix
            value: /_transactor

    - backendRefs:
        - name: collaborator
          port: 3078
      matches:
        - path:
            type: PathPrefix
            value: /_collaborator

    - backendRefs:
        - name: rekoni
          port: 4004
      matches:
        - path:
            type: PathPrefix
            value: /_rekoni

    - backendRefs:
        - name: stats
          port: 4900
      matches:
        - path:
            type: PathPrefix
            value: /_stats

    - backendRefs:
        - name: front
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
